--- a/apps/academy/templates/view_all_academy_course.html
+++ b/apps/academy/templates/view_all_academy_course.html
@@ -224,56 +224,11 @@
           <div class="role-heading">
             <h5 class="mb-1">Forum Diskusi</h5>
             <small class="d-block mb-3">Tanya jawab asinkronus antar mahasiswa.</small>
-            <a href="#" class="btn btn-sm btn-label-info text-nowrap">Go to Forum</a>
+            <a href="{% url 'chat-index' %}" class="btn btn-sm btn-label-info text-nowrap">Go to Forum</a>
           </div>
         </div>
       </div>
     </div>
   </div>
-
-  <div class="col-xl-4 col-lg-6 col-md-6">
-    <div class="card h-100">
-      <div class="card-body">
-        <div class="d-flex justify-content-between align-items-center mb-4">
-          <p class="mb-0 text-muted">Pesan Instan</p>
-          <div class="avatar">
-            <div class="avatar-initial bg-label-success rounded">
-                <i class="ri-chat-3-line ri-24px"></i>
-            </div>
-          </div>
-        </div>
-        <div class="d-flex justify-content-between align-items-end">
-          <div class="role-heading">
-            <h5 class="mb-1">Live Chat</h5>
-            <small class="d-block mb-3">Komunikasi real-time dengan peserta.</small>
-            <a href="#" class="btn btn-sm btn-label-success text-nowrap">Open Chat</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="col-xl-4 col-lg-6 col-md-6">
-    <div class="card h-100">
-      <div class="card-body">
-        <div class="d-flex justify-content-between align-items-center mb-4">
-          <p class="mb-0 text-muted">Pengaturan</p>
-          <div class="avatar">
-            <div class="avatar-initial bg-label-secondary rounded">
-                <i class="ri-settings-3-line ri-24px"></i>
-            </div>
-          </div>
-        </div>
-        <div class="d-flex justify-content-between align-items-end">
-          <div class="role-heading">
-            <h5 class="mb-1">Settings</h5>
-            <small class="d-block mb-3">Edit info kelas, arsipkan, atau hapus.</small>
-            <a href="#" class="btn btn-sm btn-label-secondary text-nowrap">Edit Course</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
 </div>
 {% endblock %}
