--- a/templates/layout/partials/menu/vertical/vertical_menu.html
+++ b/templates/layout/partials/menu/vertical/vertical_menu.html
@@ -32,9 +32,9 @@
     <li class="menu-header mt-5">
       <span class="menu-header-text">Apps & Pages</span>
     </li>
-    {% if user.is_superuser or user.userdosen %}
-    <li class="menu-item {% if request.resolver_match.url_name == 'app-chat' %}active{% endif %}">
-      <a href="{% url 'app-chat' %}" class="menu-link">
+    {% if user.is_superuser or user.userdosen or user.usermhs %}
+    <li class="menu-item {% if request.resolver_match.url_name == 'chat-index' %}active{% endif %}">
+      <a href="{% url 'chat-index' %}" class="menu-link">
         <i class="menu-icon tf-icons ri-wechat-line"></i>
         <div>Chat</div>
       </a>
@@ -53,7 +53,7 @@
     <li class="menu-item {% if 'program-studi' in request.path or 'list-academy' in request.path or 'list-course' in request.path %}active open{% endif %}">
       <a href="javascript:void(0);" class="menu-link menu-toggle">
         <i class="menu-icon tf-icons ri-graduation-cap-line"></i>
-        <div>Sett Academy</div>
+        <div>Academy</div>
       </a>
       <ul class="menu-sub">
         <li class="menu-item {% if request.resolver_match.url_name == 'program-studi-course' %}active{% endif %}">
@@ -66,16 +66,13 @@
             <div>Periode</div>
           </a>
         </li>
+        <li class="menu-item {% if request.resolver_match.url_name == 'list-academy-course' %}active{% endif %}">
+          <a href="{% url 'list-academy-course' %}" class="menu-link">
+            <div>List</div>
+          </a>
+        </li>
+      
       </ul>
-    </li>
-    {% endif %}
-
-     {% if user.is_superuser or user.userdosen %}
-    <li class="menu-item {% if request.resolver_match.url_name == 'list-academy-course' %}active{% endif %}">
-      <a href="{% url 'list-academy-course' %}" class="menu-link">
-        <i class="menu-icon tf-icons ri-graduation-cap-line"></i>
-        <div>List Academy</div>
-      </a>
     </li>
     {% endif %}
 
@@ -83,7 +80,7 @@
     <li class="menu-item {% if request.resolver_match.url_name == 'app-academy-course' %}active{% endif %}">
       <a href="{% url 'app-academy-course' %}" class="menu-link">
         <i class="menu-icon tf-icons ri-graduation-cap-line"></i>
-        <div>Academy</div>
+        <div>Course</div>
       </a>
     </li>
     {% endif %}
@@ -110,6 +107,14 @@
     {% if user.usermhs %}
     <li class="menu-item {% if request.resolver_match.url_name == 'profile' %}active{% endif %}">
       <a href="{% url 'profile' %}" class="menu-link">
+        <i class="menu-icon tf-icons ri-user-line"></i>
+        <div>Profile</div>
+      </a>
+    </li>
+    {% endif %}
+        {% if user.userdosen %}
+    <li class="menu-item {% if request.resolver_match.url_name == 'dosen-profile' %}active{% endif %}">
+      <a href="{% url 'dosen-profile' %}" class="menu-link">
         <i class="menu-icon tf-icons ri-user-line"></i>
         <div>Profile</div>
       </a>
