--- a/templates/layout/partials/navbar/navbar.html
+++ b/templates/layout/partials/navbar/navbar.html
@@ -383,12 +383,22 @@
               <li>
                 <div class="dropdown-divider"></div>
               </li>
+              {% if user.userdosen %}
+              <li>
+                <a class="dropdown-item" href="{% url 'dosen-profile' %}">
+                  <i class="ri-user-3-line ri-22px me-2"></i>
+                  <span class="align-middle">My Profile</span>
+                </a>
+              </li>
+              {% endif %}
+              {% if user.usermhs %}
               <li>
                 <a class="dropdown-item" href="{% url 'profile' %}">
                   <i class="ri-user-3-line ri-22px me-2"></i>
                   <span class="align-middle">My Profile</span>
                 </a>
               </li>
+              {% endif %}
               <li>
                 <a class="dropdown-item" href="/">
                   <i class="ri-settings-4-line ri-22px me-2"></i>
